<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SkillCinemaApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_text">onboarding_text</string>
    <string name="skip_onboarding">Пропустить</string>
    <string name="skillcinema">Skillcinema</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="movie_title">movie_title</string>
    <string name="movie_genre">movie_genre</string>
    <string name="movie_rating">movie_rating</string>
    <string name="Premiers">Премьеры</string>
    <string name="Popular">Популярное</string>
    <string name="Top250">Топ-250</string>
    <string name="random_selection">Случайная подборка</string>
    <string name="Series">Сериалы</string>
    <string name="Show_all">Все</string>
    <string name="show_all">Показать все</string>
    <string name="selection_title">Название подборки</string>
    <string name="cast">В фильме снимались</string>
    <string name="actor_name">actor_name</string>
    <string name="description">description</string>
    <string name="staff">Над фильмом работали</string>
    <string name="gallery">Галерея</string>
    <string name="similar_movies">Похожие фильмы</string>
    <string name="footer_message">Результаты не могут быть загружены</string>
    <string name="person_name">person_name</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="movies_list">Фильмография</string>
    <string name="to_movies_list">К списку</string>
    <string name="best_movies">Лучшее</string>
    <string name="series_title">Cезоны и серии</string>
    <string name="gallery_title">Галерея</string>
    <string name="similar_movies_list">Похожие фильмы</string>
    <string name="movie_info">movie_info</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="favorites">Любимое</string>
    <string name="to_watch">Хочу посмотреть</string>
    <string name="season_title">Сезон</string>
    <string name="seasons_info">seasons_info</string>
    <string name="done">Готово</string>
    <string name="custom_collection">Custom collection</string>
    <string name="watched">Просмотрено</string>
    <string name="Collections">Коллекции</string>
    <string name="create_custom_collection">Создать свою коллекцию</string>
    <string name="favorits">Любимые</string>
    <string name="want_to_watch">Хочу посмотреть</string>
    <string name="interesting">Вам было интересно</string>
    <string name="watched_movies">Просмотренные фильмы</string>
    <string name="interesting_movies">Вам были интересны эти фильмы</string>
    <string name="collection_title">collection title</string>
    <string name="error">Ошибка!</string>
    <string name="error_description">Коллекция с таким именем уже существует</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="apply">Применить</string>
    <string name="all">Все</string>
    <string name="movies">Фильмы</string>
    <string name="series">Сериалы</string>
    <string name="show">Показывать</string>
    <string name="country_text">Страна</string>
    <string name="genre_text">Жанр</string>
    <string name="year_text">Год</string>
    <string name="rating_text">Рейтинг</string>
    <string name="any_rating">Любой</string>
    <string name="sort">Сортировать</string>
    <string name="date">Дата</string>
    <string name="popularity">Популярность</string>
    <string name="show_watched_text">Просмотрен</string>
    <string name="country_title">Страна</string>
    <string name="genre_title">Жанр</string>
    <string name="period">Период</string>
    <string name="search_from">Искать в период с</string>
    <string name="search_to">Искать в период до</string>
    <string name="choose">Выбрать</string>
    <string name="error_search">К сожалению, по Вашему запросу ничего не найдено</string>
    <string name="choose_collection_name">Придумайте название для Вашей новой коллекции</string>
    <string name="no_connection_text">Нет подключения к интернету</string>
    <string name="try_again">Попробовать снова</string>
</resources>