<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="42dp"
    tools:context=".ui.search.SearchSettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:elevation="2dp"
            android:text="@string/search_settings"
            android:textAlignment="center"
            android:textAppearance="@style/selection_title_text_style" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="33dp"
            android:background="@drawable/arrow_button_background"
            android:src="@drawable/back_icon" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            >

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/country_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginBottom="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/show_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="26dp"
                        android:text="@string/show"
                        android:textAppearance="@style/skip_button_text_style" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show_text"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="0dp"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/all"
                            style="@style/CustomChipStyleLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:clickable="true"
                            android:text="@string/all"
                            android:textSize="14sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/movies"
                            style="@style/CustomChipStyleCenter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:clickable="true"
                            android:text="@string/movies"
                            android:textSize="14sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/series"
                            style="@style/CustomChipStyleRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:clickable="true"
                            android:text="@string/series"
                            android:textSize="14sp" />

                    </com.google.android.material.chip.ChipGroup>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/country_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chip_group"
                        android:layout_marginTop="32dp"
                        android:layout_marginStart="26dp"
                        android:text="@string/country_text"
                        android:textAppearance="@style/description_text_style" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chip_group"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="26dp"
                        android:text="@string/country_text"
                        android:textAppearance="@style/seasons_text_style"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/genre_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@drawable/border">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/genre_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="26dp"
                        android:text="@string/genre_text"
                        android:textAppearance="@style/description_text_style" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="26dp"
                        android:text="@string/genre_text"
                        android:textAppearance="@style/seasons_text_style"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/year_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@drawable/border">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/year_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="26dp"
                        android:text="@string/year_text"
                        android:textAppearance="@style/description_text_style" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="26dp"
                        android:text="@string/year_text"
                        android:textAppearance="@style/seasons_text_style"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rating_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/rating_text"
                        android:textAppearance="@style/description_text_style" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/any_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="26dp"
                        android:text="@string/any_rating"
                        android:textAppearance="@style/seasons_text_style"
                        android:textSize="14sp" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/slider"
                        style="@style/CustomSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_text"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="26dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/min_slider_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/slider"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="1"
                        android:textAppearance="@style/seasons_text_style"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/max_slider_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/slider"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="36dp"
                        android:layout_marginBottom="16dp"
                        android:text="10"
                        android:textAppearance="@style/seasons_text_style"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/sorting_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@drawable/border">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sorting_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/sort"
                        android:textAppearance="@style/skip_button_text_style" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sorting_text"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        app:chipSpacingHorizontal="0dp"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/date"
                            style="@style/CustomChipStyleLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:clickable="true"
                            android:text="@string/date"
                            android:textSize="14sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/popularity"
                            style="@style/CustomChipStyleCenter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:clickable="true"
                            android:text="@string/popularity"
                            android:textSize="14sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/rating"
                            style="@style/CustomChipStyleRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:clickable="true"
                            android:text="@string/rating_text"
                            android:textSize="14sp" />

                    </com.google.android.material.chip.ChipGroup>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/watched_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/watched_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="28dp"
                        android:background="@drawable/watched_icon_background" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/watched_filter_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="28dp"
                        android:layout_toRightOf="@id/watched_icon"
                        android:text="@string/show_watched_text"
                        android:textAppearance="@style/description_text_style" />

                </RelativeLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>